Try to remove "module-info.test"